# rust-rtx-weekend

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  color.rs  hit.rs  main.rs  material.rs  math_util.rs  objects.rs  ray.rs  vec2.rs  vec3.rs
