[package]
name = "rtx_weekend"
version = "0.1.0"
edition = "2024"

[dependencies]
indicatif = { version = "0.18.0", features = ["rayon"] }
itertools = "0.14.0"
memmap = "0.7.0"
rand = { version = "0.9.2", default-features = false, features = ["std", "small_rng", "thread_rng"] }
rayon = "1.10.0"
thiserror = "2.0.12"
